--- a/docs/source/usage/rp66v1.rst
+++ b/docs/source/usage/rp66v1.rst
@@ -9,28 +9,16 @@
 Processing RP66V1 Files
 =======================
 
- :file:`CPIPMain.py`
- 
- 
- :ref:`total_depth.processing_rp66v1_files`
-
 
 Important Concepts
 ------------------------------
 
-Due to the size of data TotalDepth makes extensive use of lazy evaluation and generators, this means that compute power is only used where necessary.
-
 The internal representation of a RP66V1 files is as follows:
 
-* The physical file consists of a Storage Unit Label followed by any number of Logical Files. These are independent from each other.
-* Each Logical File consists of a number of Explicitly Formatted Logical Records (EFLRs) and optionally a single Log Pass
-* The Log Pass represents a single data collection run (example: "Repeat Section") and contains one or more Frame Arrays
-* A Frame Array is a number of frames of channel data.
-
-For example a RP66V1 file contains two Logical Files representing the "Repeat Section" and "Main Log". Each of these has a number of EFLRs and a Log Pass that contains two Frame Arrays one is sampled at one inch and the other every six inches. The one inch Frame Array has many more channels than the six inch one.
-
-
-
+* The physical file consists of a Storage Unit Label followed by any number of Logical Files. Logical Files are independent from each other.
+* Each Logical File consists of a number of Explicitly Formatted Logical Records (EFLRs) and optionally a single *Log Pass*.
+* The *Log Pass* represents a single data collection run (example: "Repeat Section") and contains one or more *Frame Arrays*.
+* A *Frame Array* is a number of frames of channel data.
 
 Log Pass
 ^^^^^^^^^^^^^^
@@ -43,13 +31,41 @@ Frame Array
 
 A :term:`Frame Array` is the logging data converted to the platforms internal types (usually C doubles) and stored in memory as a table where each row represents a particular depth (or time) and each column is the output of a specific channel. Each row is often referred to as a :term:`Frame`
 
-Examples
-----------
 
-These examples show how to iterate through a RP66V1 file.
+Conceptual Model
+^^^^^^^^^^^^^^^^^^^^^^
 
-Reading EFLRs
-^^^^^^^^^^^^^^^^
+An example of a RP66V1 file might be one that contains two Logical Files representing, say, the "Repeat Section" and "Main Log". Each of these has a number of EFLRs and a Log Pass that contains two Frame Arrays, one is sampled every inch in depth and the other every six inches. The two Frame Arrays might have different channels.
+
+A conceptual model of this physical RP66V1 file might be:
+
+.. code-block:: console
+
+    Physical File
+    |-> Storage Unit Label
+    |-> Logical File[0] "Repeat Section"
+    |   |-> EFLRs
+    |   |-> Log Pass
+    |       |-> Frame Array at 1 inch spacing with channels A, B, C
+    |       |-> Frame Array at 6 inch spacing with channels B, D, E
+    |-> Logical File[1] "Main Log"
+        |-> EFLRs
+        |-> Log Pass
+    |       |-> Frame Array at 1 inch spacing with channels A, B, C, X
+    |       |-> Frame Array at 6 inch spacing with channels B, D, E, F
+
+
+
+The following examples show how to iterate through a RP66V1 file and access the tables and frame data.
+The code snippets here are all in :file:`example_data/RP66V1/demo_read.py`
+
+.. warning:: At this version, |version|, these APIs are provisional, not final.
+
+
+Reading :term:`RP66V1.EFLR` Tables
+--------------------------------------
+
+An :term:`RP66V1.Explicitly Formatted Logical Record` is a table of data organised in rows and columns.
 
 As an example::
 
@@ -122,10 +138,23 @@ Produces this output (only the first two EFLRs are shown):
           CD: 000 00000 L: b'NAME-SPACE-VERSION' C: 1 R: 18 (UVARI) U: b'' V: None
 
 
-Reading EFLR Contents
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Reading :term:`EFLR` Contents
+--------------------------------
 
-The following accesses the contents of every ``EQUIPMENT`` EFLR::
+Each value in a row/column is known as an ``Attribute`` which has the following properties:
+
+============ ========= =======================================================================
+Property     Type      Description
+============ ========= =======================================================================
+``label``    ``bytes`` The label identifying the Attribute.
+``count``    ``int``   The number of the values the Attribute has.
+``rep_code`` ``int``   The Representation Code of the values of the Attribute.
+``units``    ``bytes`` The units of the value.
+``value``    ``list``  The value itself.
+============ ========= =======================================================================
+
+
+The following code accesses the contents of every ``EQUIPMENT`` EFLR::
 
     with open(path_in, 'rb') as fobj:
         rp66v1_file = File.FileRead(fobj)
@@ -139,43 +168,51 @@ The following accesses the contents of every ``EQUIPMENT`` EFLR::
                         print(f'    Row: {row.name.I}')
                         for attr in row.attrs:
                             # attr is a TotalDepth.RP66V1.core.LogicalRecord.EFLR.Attribute
-                            print(f'        {attr.label}={attr.value}')
+                            print(f'        {attr.label}={attr.value} ({attr.units})')
+
+
+Will produce something like this (output truncated):
 
 .. code-block:: console
 
+
         Row: b'MSCT/MCFU_1/EQUIPMENT'
-            b'LENGTH'=[125.0]
-            b'TRADEMARK-NAME'=[b'MCFU_1-AA']
-            b'PRESSURE'=[20000.0]
-            b'STATUS'=[1]
-            b'SERIAL-NUMBER'=[b'119.']
-            b'TEMPERATURE'=[350.0]
-            b'VOLUME'=[1.5700000524520874]
-            b'MINIMUM-DIAMETER'=[5.25]
-            b'WEIGHT'=[144.0]
+            b'LENGTH'=[125.0] (b'in')
+            b'TRADEMARK-NAME'=[b'MCFU_1-AA'] (b'')
+            b'PRESSURE'=[20000.0] (b'psi')
+            b'STATUS'=[1] (b'')
+            b'SERIAL-NUMBER'=[b'119.'] (b'')
+            b'TEMPERATURE'=[350.0] (b'degF')
+            b'VOLUME'=[1.5700000524520874] (b'ft3')
+            b'MINIMUM-DIAMETER'=[5.25] (b'in')
+            b'WEIGHT'=[144.0] (b'lbm')
         Row: b'MSCT/MCMU/EQUIPMENT'
-            b'LENGTH'=[164.5]
-            b'TRADEMARK-NAME'=[b'MCMU-AA']
-            b'PRESSURE'=[20000.0]
-            b'STATUS'=[1]
-            b'SERIAL-NUMBER'=[b'65.']
-            b'TEMPERATURE'=[350.0]
-            b'VOLUME'=[2.059999942779541]
-            b'MINIMUM-DIAMETER'=[5.25]
-            b'WEIGHT'=[580.0]
+            b'LENGTH'=[164.5] (b'in')
+            b'TRADEMARK-NAME'=[b'MCMU-AA'] (b'')
+            b'PRESSURE'=[20000.0] (b'psi')
+            b'STATUS'=[1] (b'')
+            b'SERIAL-NUMBER'=[b'65.'] (b'')
+            b'TEMPERATURE'=[350.0] (b'degF')
+            b'VOLUME'=[2.059999942779541] (b'ft3')
+            b'MINIMUM-DIAMETER'=[5.25] (b'in')
+            b'WEIGHT'=[580.0] (b'lbm')
         Row: b'MSCT/CORE_BIT/EQUIPMENT'
-            b'LENGTH'=[1.0]
-            b'TRADEMARK-NAME'=[b'BIT-AA']
-            b'PRESSURE'=[20000.0]
-            b'STATUS'=[1]
-            b'SERIAL-NUMBER'=[b'0.']
-            b'TEMPERATURE'=[350.0]
-            b'VOLUME'=[0.0]
-            b'MINIMUM-DIAMETER'=[1.0]
-            b'WEIGHT'=[1.0]
+            b'LENGTH'=[1.0] (b'in')
+            b'TRADEMARK-NAME'=[b'BIT-AA'] (b'')
+            b'PRESSURE'=[20000.0] (b'psi')
+            b'STATUS'=[1] (b'')
+            b'SERIAL-NUMBER'=[b'0.'] (b'')
+            b'TEMPERATURE'=[350.0] (b'degF')
+            b'VOLUME'=[0.0] (b'ft3')
+            b'MINIMUM-DIAMETER'=[1.0] (b'in')
+            b'WEIGHT'=[1.0] (b'lbm')
             ...
 
 
+
+
+Reading the Frame Data and accessing the numpy Arrays
+--------------------------------------------------------
 
 Reading the data into numpy arrays::
 
@@ -236,9 +273,10 @@ Would give this output:
     Min:       -0.927 Max:        2.891
 
 
+Limiting the Amount of Data Read
+--------------------------------------
 
-
-The :py:func:`TotalDepth.RP66V1.core.LogicalFile.populate_frame_array` can take the following, optional, arguments:
+The RP66V1 Frame Array can be very large so to make it more manageable the :py:func:`TotalDepth.RP66V1.core.LogicalFile.populate_frame_array` can take the following, optional, arguments:
 
 * `channels`: A sequence of channel identifiers. Only these channels will be populated into the numpy arrays in the Frame Array. The other channels will have a zero length numpy array. Channel 0, the X axis, will always be populated.
 * To control the number of frames that are populated use either:
