--- a/docs/source/usage/rp66v1.rst
+++ b/docs/source/usage/rp66v1.rst
@@ -37,7 +37,7 @@ Specifically a Logical File starts with an ``FILE-HEADER`` EFLR followed by an `
 
 A Logical FIle might represent all the data recorded in, say, a "Repeat Section" and Logical Files are independent from each other [#]_.
 
-The conceptual model for the Logical File delimited RP66V1 file is something like this:
+This conceptual model for the Logical File delimited RP66V1 file is something like this:
 
 .. code-block:: console
 
@@ -53,6 +53,9 @@ The conceptual model for the Logical File delimited RP66V1 file is something lik
         |-> IFLR
         ...
     |-> Logical File[1] "Main Log"
+        |-> EFLR type FILE-HEADER
+        |-> EFLR type ORIGIN
+        |-> EFLR
         ...
 
 The collection of IFLRs for any Logical File can be further organised into a single *Log Pass*.
@@ -60,7 +63,7 @@ The collection of IFLRs for any Logical File can be further organised into a sin
 Log Pass
 ^^^^^^^^^^^^^^
 
-A :term:`Log Pass` represents a typical, independent, logging recording. A "Repeat Section" plus a "Main Log" are two, distinct, independent Log Passes.
+A :term:`Log Pass` represents a typical, independent, logging recording. A "Repeat Section" and a "Main Log" are two, distinct, independent Log Passes.
 The *Log Pass* is defined by two EFLRs, a ``CHANNEL`` that describes all the available measurements for that Logical File and a ``FRAME`` that describes the sets of these channels that go into a recording, the index and the spacing.
 The *Log Pass* represents a single data collection run (example: "Repeat Section") and contains one or more *Frame Arrays*.
 
@@ -70,13 +73,14 @@ Frame Array
 
 A :term:`Frame Array` contains a number of frames of channel data converted to the platforms internal types (usually C doubles) and stored in memory as a table.
 In this table each row represents a particular value on the X axis (typically depth or time) and each column is the output of a specific channel. Each row is often referred to as a :term:`Frame`
-There can be multiple values for any channel in a frame.
+There can be multiple values for any channel in a frame except for the X axis which has a single value per frame.
+A value can be an :term:`Absent Value` indicating that no data was recorded for this channel and frame.
 
 
 Conceptual Model Presented by TotalDepth
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-By example here is a RP66V1 file might be one that contains two Logical Files representing, say, the "Repeat Section" and "Main Log". Each of these has a number of EFLRs and a Log Pass that contains two Frame Arrays, one is sampled every inch in depth and the other every six inches. The two Frame Arrays might have different channels.
+By example here is a RP66V1 file that contains two Logical Files representing, say, the "Repeat Section" and the "Main Log". Each of these has a number of EFLRs and a Log Pass that contains two Frame Arrays, one is sampled every inch in depth and the other every six inches. The two Frame Arrays might have different channels.
 
 This model of the physical RP66V1 file will be something like:
 
@@ -98,7 +102,7 @@ This model of the physical RP66V1 file will be something like:
     |       |-> Frame Array at 6 inch spacing with channels B, D, E, F
 
 
-This model is exposed with the class :py:class:`TotalDepth.RP66V1.core.LogicalFile.LogicalIndex` which allows random access to all parts of the file.
+This model is exposed with the class :py:class:`TotalDepth.RP66V1.core.LogicalFile.LogicalIndex`. The LogicalIndex contains a sequence of :py:class:`TotalDepth.RP66V1.core.LogicalFile.LogicalFile` objects that allows random access to all parts of the file.
 
 The following examples show how to iterate through a RP66V1 file with the ``LogicalIndex`` and access the tables and frame data.
 The code snippets here are all in :file:`example_data/RP66V1/demo_read.py`
@@ -133,9 +137,7 @@ Or an open, binary, file:
 Example Data
 ^^^^^^^^^^^^^^^^^^^^^^
 
-There are some example RP66V1 files in :file:`example_data/RP66V1/data` and there is some example RP66V1 binary data in the module :py:mod:`tests.unit.RP66V1.core.test_data`.
-
-To use the former the path, for example:
+There are some example RP66V1 files distributed in :file:`example_data/RP66V1/data`, for example:
 
 .. code-block:: python
 
@@ -146,7 +148,7 @@ To use the former the path, for example:
         # Do something
 
 
-To use the latter import the modul and create a file object from the bytes in the module, for example:
+There is also some example RP66V1 binary data in the module :py:mod:`tests.unit.RP66V1.core.test_data`, for example:
 
 .. code-block:: python
 
@@ -223,6 +225,7 @@ Notes:
 Here is an example of accessing all of the above properties for the ``BASIC_FILE``:
 
 .. code-block:: python
+    :emphasize-lines: 7-26
 
     from TotalDepth.RP66V1.core import LogicalFile
     from tests.unit.RP66V1.core import test_data
@@ -423,6 +426,25 @@ More about :term:`RP66V1.EFLR` Tables
 
 An :term:`RP66V1.Explicitly Formatted Logical Record` is a table of data organised in rows and columns.
 
+.. code-block:: python
+
+    Table
+        Row
+            Value
+            Value
+            ...
+        Row
+            Value
+            Value
+            ...
+        ...
+        
+This is implemented by TotalDepth as:
+
+* Table: :py:class:`TotalDepth.RP66V1.core.LogicalRecord.EFLR.ExplicitlyFormattedLogicalRecord`
+* Row is an ``Object``: :py:class:`TotalDepth.RP66V1.core.LogicalRecord.EFLR.Object`
+* Value is an ``Attribute``: :py:class:`TotalDepth.RP66V1.core.LogicalRecord.EFLR.Attribute`
+
 
 Reading :term:`EFLR` Contents
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -447,6 +469,7 @@ Property     Type      Description
 These Attributes are iterable, for example the following code accesses the contents of every ``PARAMETER`` EFLR:
 
 .. code-block:: python
+    :emphasize-lines: 7-16
 
     from TotalDepth.RP66V1.core import LogicalFile
     from tests.unit.RP66V1.core import test_data
@@ -673,6 +696,7 @@ Will produce something like this (output truncated):
 Or the Attributes can be extracted by identity or integer index, for example:
 
 .. code-block:: python
+    :emphasize-lines: 4-8
 
     file_object = io.BytesIO(test_data.BASIC_FILE)
     with LogicalFile.LogicalIndex(file_object) as logical_index:
@@ -697,12 +721,13 @@ Gives:
     CD: 001 01101 L: b'LONG-NAME' C: 1 R: 20 (ASCII) U: b'' V: [b'LOCATION']
 
 
-Reading the Frame Data and accessing the numpy Arrays
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Reading the Frame Data and Accessing the ``numpy`` Arrays
+---------------------------------------------------------------------
 
-Here is an example of accessing the numpy arrays, ``np.describe()`` to describe each array:
+Here is an example of accessing the numpy arrays and using ``np.describe()`` to describe each array:
 
 .. code-block:: python
+    :emphasize-lines: 10-23
 
     import numpy as np
 
@@ -795,6 +820,7 @@ Making Calculations on the ``numpy`` Data
 Very similar to the above we can make some calculations using standard ``numpy`` calls:
 
 .. code-block:: python
+    :emphasize-lines: 10-23
 
     import numpy as np
 
@@ -861,13 +887,13 @@ Would give this output:
 Limiting the Amount of Data Read
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-The RP66V1 Frame Array can be very large so to make it more manageable the :py:func:`TotalDepth.RP66V1.core.LogicalFile.populate_frame_array` can take the following, optional, arguments:
+The RP66V1 Frame Array can be very large so to make it more manageable the :py:meth:`TotalDepth.RP66V1.core.LogicalFile.LogicalIndex.populate_frame_array` can take the following, optional, arguments:
 
 * `channels`: A sequence of channel identifiers. Only these channels will be populated into the numpy arrays in the Frame Array. The other channels will have a zero length numpy array. Channel 0, the X axis, will always be populated.
 * `frame_slice` to reduce the number of frames that are populated. You can use either of these classes:
 
     * :py:class:`TotalDepth.common.Slice.Slice` which takes optional start, stop, step values that default to ``(0, len(data), 1)``. For example if there are 128 frames available then ``Slice(64, None, 2)`` would populate every other frame from frame 64 to the end.
-    * :py:class:`TotalDepth.common.Slice.Split` which takes single integer, this is maximum number of frames to be populated and they will be evenly spaced throughout the Frame Array. For example if there are 128 available frames that ``Split(8)`` would populate the numpy arrays with every 16th frame.
+    * :py:class:`TotalDepth.common.Slice.Split` which takes single integer, this is maximum number of frames to be populated and they will be evenly spaced throughout the Frame Array. For example if there are 128 available frames that ``Split(8)`` would populate each numpy array with every 16th frame producing 8 frames.
 
 For example, adding the two highlighted lines which populates every 64th frame and channels 1 and 2:
 
