--- a/docs/source/usage/rp66v1.rst
+++ b/docs/source/usage/rp66v1.rst
@@ -729,28 +729,24 @@ Reading the Frame Data and Accessing the ``numpy`` Arrays
 Here is an example of accessing the numpy arrays and using ``np.describe()`` to describe each array:
 
 .. code-block:: python
-    :emphasize-lines: 10-23
+    :emphasize-lines: 7-19
 
     import numpy as np
 
-    from TotalDepth.RP66V1.core import File
     from TotalDepth.RP66V1.core import LogicalFile
 
-    with open(path_in, 'rb') as fobj:
-        rp66v1_file = File.FileRead(fobj)
-        logical_index = LogicalFile.LogicalIndex(rp66v1_file, ident=path_in)
+    with LogicalFile.LogicalIndex(path_in) as logical_index:
         for logical_file in logical_index.logical_files:
             if logical_file.has_log_pass:
                 for frame_array in logical_file.log_pass:
-                    frame_count = LogicalFile.populate_frame_array(
-                        rp66v1_file, logical_file, frame_array
-                    )
+                    print(frame_array)
+                    frame_count = logical_file.populate_frame_array(frame_array)
                     print(
                         f'Loaded {frame_count} frames and {len(frame_array)} channels'
                         f' from {frame_array.ident} using {frame_array.sizeof_array} bytes.'
                     )
-                    print()
                     for channel in frame_array.channels:
+                        print(channel)
                         # channel.array is a numpy array
                         np.info(channel.array)
                         print()
@@ -822,23 +818,18 @@ Making Calculations on the ``numpy`` Data
 Very similar to the above we can make some calculations using standard ``numpy`` calls:
 
 .. code-block:: python
-    :emphasize-lines: 10-23
+    :emphasize-lines: 7-18
 
     import numpy as np
 
-    from TotalDepth.RP66V1.core import File
     from TotalDepth.RP66V1.core import LogicalFile
 
-    with open(path_in, 'rb') as fobj:
-        rp66v1_file = File.FileRead(fobj)
-        logical_index = LogicalFile.LogicalIndex(rp66v1_file, ident=path_in)
+    with LogicalFile.LogicalIndex(path_in) as logical_index:
         for logical_file in logical_index.logical_files:
             if logical_file.has_log_pass:
                 for frame_array in logical_file.log_pass:
                     print(frame_array)
-                    frame_count = LogicalFile.populate_frame_array(
-                        rp66v1_file, logical_file, frame_array
-                    )
+                    frame_count = logical_file.populate_frame_array(frame_array)
                     print(
                         f'Loaded {frame_count} frames and {len(frame_array)} channels'
                         f' from {frame_array.ident} using {frame_array.sizeof_array} bytes.'
@@ -900,20 +891,17 @@ The RP66V1 Frame Array can be very large so to make it more manageable the :py:m
 For example, adding the two highlighted lines which populates every 64th frame and channels 1 and 2:
 
 .. code-block:: python
-    :emphasize-lines: 13,14
+    :emphasize-lines: 2,10-11
     
-    from TotalDepth.RP66V1.core import File
     from TotalDepth.RP66V1.core import LogicalFile
     from TotalDepth.common import Slice
 
-    with open(path_in, 'rb') as fobj:
-        rp66v1_file = File.FileRead(fobj)
-        logical_index = LogicalFile.LogicalIndex(rp66v1_file, ident=path_in)
+    with LogicalFile.LogicalIndex(path_in) as logical_index:
         for logical_file in logical_index.logical_files:
             if logical_file.has_log_pass:
                 for frame_array in logical_file.log_pass:
-                    frame_count = LogicalFile.populate_frame_array(
-                        rp66v1_file, logical_file, frame_array,
+                    frame_count = logical_file.populate_frame_array(
+                        frame_array,
                         frame_slice=Slice.Slice(0, None, 64),
                         channels={frame_array.channels[1].ident, frame_array.channels[2].ident}
                     )
